// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAriaLive should render correctly 1`] = `
<div
  aria-live="polite"
  className="bpk-aria-live bpk-aria-live--invisible"
>
  Backpack
</div>
`;

exports[`BpkAriaLive should render correctly with politenessSetting="assertive" 1`] = `
<div
  aria-live="assertive"
  className="bpk-aria-live bpk-aria-live--invisible"
>
  Backpack
</div>
`;

exports[`BpkAriaLive should render correctly with politenessSetting="off" 1`] = `
<div
  aria-live="off"
  className="bpk-aria-live bpk-aria-live--invisible"
>
  Backpack
</div>
`;

exports[`BpkAriaLive should render correctly with politenessSetting="polite" 1`] = `
<div
  aria-live="polite"
  className="bpk-aria-live bpk-aria-live--invisible"
>
  Backpack
</div>
`;

exports[`BpkAriaLive should render correctly with the "visible" prop 1`] = `
<div
  aria-live="polite"
  className="bpk-aria-live"
>
  Backpack
</div>
`;

exports[`BpkAriaLive should support arbitrary props 1`] = `
<div
  aria-live="polite"
  className="bpk-aria-live bpk-aria-live--invisible"
  testID="123"
>
  Backpack
</div>
`;

exports[`BpkAriaLive should support custom class names 1`] = `
<div
  aria-live="polite"
  className="bpk-aria-live bpk-aria-live--invisible custom-classname"
>
  Backpack
</div>
`;
